# bookstore

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.dev  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.github/workflows/: build.yml  github-actions-demo.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py  tests.py  urls.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category.py  tests_product.py
product/tests/test_serializers/: test_product_serializer.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/tests/test_viewsets/: test_category_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
