[project]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = [
    {name = "YuriGConstantino",email = "yuri.gconstantino@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "django (>=6.0,<7.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]

[dependency-groups]
dev = [
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
